# nbody

./: .gitignore  CMakeLists.txt  README.md  index.html  make_html.py  nbody.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
images/: index.html
nbody_jax/: __init__.py  nbody.py
src/: nbody.cpp  nbody.h  nbody_bind.cpp
